@@ -482,12 +482,20 @@ appender.stdout.pattern=%-5p %d{ISO8601} (%C.%M:%L) - %m%n
 # ma.log file appender
 appender.logfile.level=trace
 appender.logfile.pattern=%-5p %d{ISO8601} (%C.%M:%L) - %m%n
+appender.logfile.size=100MB
+appender.logfile.delete.age=30d
+appender.logfile.delete.count=1000
+appender.logfile.delete.size=1GB
 # frontend appender
 appender.frontend.level=trace
 appender.frontend.pattern=%-5p %d{ISO8601} (%C.%M:%L) - %m%n
 # script log file appender
 appender.script.level=trace
 appender.script.pattern=%-5p %d{ISO8601} %c - %m%n
+appender.script.size=100MB
+appender.script.delete.age=30d
+appender.script.delete.count=1000
+appender.script.delete.size=1GB
 
 # You can configure any log4j2 property here
 # See https://logging.apache.org/log4j/2.x/manual/configuration.html#System_Properties
